# manager/delivery/httpserver/sourcehandler/route.go
@@ -5,9 +5,10 @@ import (
 	"github.com/ormushq/ormus/manager/delivery/httpserver/middleware"
 )
 
-func (h Handler) SetSourceRoute(e *echo.Echo) {
+func (h Handler) SetRoutes(e *echo.Echo) {
 	sourceGroups := e.Group("/sources", middleware.GetTokenFromHeader(h.authSvc))
-	sourceGroups.POST("/", h.Create)
+	sourceGroups.GET("", h.List)
+	sourceGroups.POST("", h.Create)
 	sourceGroups.POST("/:sourceID", h.Update)
 	sourceGroups.DELETE("/:sourceID", h.Delete)
 }
