# manager/entity/source.go
@@ -17,23 +17,24 @@ const (
 
 // TODO: need change feilds.
 type Source struct {
-	ID          string
-	WriteKey    WriteKey
-	Name        string
-	Description string
-	ProjectID   string
-	OwnerID     string
-	Status      Status
-	Metadata    SourceMetadata
-	Deleted     bool
-	CreatedAt   time.Time
-	UpdatedAt   time.Time
-	DeletedAt   *time.Time
+	ID          string         `json:"id"`
+	TokenID     string         `json:"token_id"`
+	WriteKey    WriteKey       `json:"write_key"`
+	Name        string         `json:"name"`
+	Description string         `json:"description"`
+	ProjectID   string         `json:"project_id"`
+	OwnerID     string         `json:"owner_id"`
+	Status      Status         `json:"status"`
+	Metadata    SourceMetadata `json:"metadata"`
+	Deleted     bool           `json:"deleted"`
+	CreatedAt   time.Time      `json:"created_at"`
+	UpdatedAt   time.Time      `json:"updated_at"`
+	DeletedAt   *time.Time     `json:"deleted_at"`
 }
 
 type SourceMetadata struct {
-	ID       string
-	Name     string
-	Slug     string
-	Category SourceCategory
+	ID       string         `json:"id"`
+	Name     string         `json:"name"`
+	Slug     string         `json:"slug"`
+	Category SourceCategory `json:"category"`
 }
